改為用consul config server作為設定檔來源 bootstrap.yml 作為基礎設定 不包含url資訊 bootstrap-dev.yml 作為基礎設定 有包含url資訊 其他設定由config server設置

--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -107,6 +107,15 @@
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-context</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -121,7 +130,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-				  <mainClass>com.topkey.api.App</mainClass>
+					<mainClass>com.topkey.api.App</mainClass>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
