--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -40,41 +40,28 @@
 # - 當存在 bootstrap 系列設定檔時，所有與 Consul 相關的設定都應該放在 bootstrap 系列設定檔中，而不是 application 系列設定檔中。
 # - 這是因為這些配置需要在應用程式啟動的早期階段就被讀取，以便正確地與 Consul 進行服務註冊和發現。
 
-#spring:
-# profiles:
-#  active: dev
-# config:
-#  import: 'optional:consul:10.4.3.249:8500/config/api-service/data'
-# application:
-#  name: api-service
-# cloud:
-#  consul:
-#    host: 10.4.3.249
-#    port: 8500
-#    config:
-#     format: YAML
-#     fail-fast: true
-#     prefixes: config
-#    discovery:
-#     serviceName: api-service
-##     healthCheckUrl: http://10.4.4.136:8088/actuator/health
-#     healthCheckPath: /actuator/health
-#     healthCheckInterval: 10s
-#     healthCheckCriticalTimeout: 30s
-# rabbitmq:
-#  host: 10.4.3.249
-#  port: 5672
-#  username: mouser
-#  password: secret
-#bezkoder:
-#   openapi:
-#     dev-url: http://localhost:8088
-#     prod-url: https://localhost:8080
-#management:
-#  endpoints:
-#   web:
-#    exposure:
-#     include: health,info
-#test:
-# test1:
-#  test2: 7788
+
+###########################################################
+# 因為要外部指定profile=XXX,所以將會改變的部分如IP,放置在bootstrap-XXX.yml以利管理.
+###########################################################
+spring:
+ application:
+  name: api-service
+ cloud:
+  consul:
+    config:
+     watch:
+      enabled: true
+     format: YAML
+     fail-fast: true
+     prefixes: config
+    discovery:
+     serviceName: api-service
+     tags: dev
+     healthCheckInterval: 10s
+     healthCheckCriticalTimeout: 30s
+management:
+    endpoints:
+     web:
+      exposure:
+       include: health,info
