--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
 	<properties>
 		<java.version>22</java.version>
 		<spring-cloud.version>2023.0.2</spring-cloud.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.compiler.encoding>${project.build.sourceEncoding}</maven.compiler.encoding>
+        <maven.resources.encoding>${project.build.sourceEncoding}</maven.resources.encoding>
 	</properties>
 
 	<dependencyManagement>
